<resources>
    <string name="app_name">Business Tour Management</string>
    <string name="img_logo_description">Company Logo</string>
    <string name="company_name">Business Tour Management</string>
    <string name="loading_text">Đang tải</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="Login">Đăng nhập</string>
    <string name="Admin">Quản trị viên</string>
    <string name="The_tour_is_organized">Chuyến tham quan được tổ chức</string>
    <string name="CompanyWithSchool">Doanh nghiệp liên kết với nhà trường</string>
    <string name="StudentManagement">Sinh viên được quản lý</string>
    <string name="TeacherManagement">Giáo viên đại diện nhà trường</string>
    <string name="TourManagement">Các chuyến tham quan doanh nghiệp</string>
    <string name="BusinessTourManagement">Quản lý tham quan doanh nghiệp</string>
    <string name="StudentInformationManagement">Quản lý thông tin sinh viên</string>
    <string name="TeacherInformationManagement">Quản lý thông tin giáo viên</string>
    <string name="BusinessInformationManagement">Quản lý thông tin doanh nghiệp</string>
    <string name="ClassroomInformationManagement">Quản lý thông tin lớp học</string>
    <string name="SystemManagement">Quản lý hệ thống</string>
    <string name="home">Trang chủ</string>
    <string name="naviDrawerOpen">Mở</string>
    <string name="naviDrawerClose">Đóng</string>
    <string name="find">Tìm kiếm</string>
    <string name="noTour">Không có tour nào được đăng ký.</string>
    <string name="add">Thêm</string>
    <string name="delete">Xóa</string>
    <string name="addWithTourBusiness">Thêm tour tham quan</string>
    <string name="addWithStudent">Thêm sinh viên</string>
    <string name="CodeTour">Mã tour tham quan</string>
    <string name="CodeStudent">Mã sinh viên</string>
    <string name="NameTour">Tên tour tham quan</string>
    <string name="NameStudent">Tên sinh viên</string>
    <string name="NameTeacher">Giáo viên</string>
    <string name="NameCompany">Công ty</string>
    <string name="NameClass">Lớp</string>
    <string name="Available">Số lượng sinh viên</string>
    <string name="Address">Địa chỉ</string>
    <string name="DateStat">Ngày xuất phát</string>
    <string name="BirthDate">Ngày sinh</string>
    <string name="Confirm">Xác nhận</string>
    <string name="Cancel">Hủy</string>
    <string name="Description">Chi tiết chuyến đi</string>
    <string name="Email">Email</string>
    <string name="PhoneNumber">Số điện thoại</string>
    <string name="AddStudentByTour">Quản lý sinh viên cho tour</string>
    <string name="ManagementStudent">Quản lý sinh viên</string>

</resources>