<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        >
        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@null"
            />
        <item android:id="@+id/BusinessTourManagement"
            android:title="@string/BusinessTourManagement"
            android:icon="@null"
            />
        <item android:id="@+id/StudentInformationManagement"
            android:title="@string/StudentInformationManagement"
            android:icon="@null"
            />
        <item android:id="@+id/TeacherInformationManagement"
            android:title="@string/TeacherInformationManagement"
            android:icon="@null"
            />
        <item android:id="@+id/BusinessInformationManagement"
            android:title="@string/BusinessInformationManagement"
            android:icon="@null"
            />
        <item android:id="@+id/ClassroomInformationManagement"
            android:title="@string/ClassroomInformationManagement"
            android:icon="@null"
            />
        <item android:id="@+id/SystemManagement"
            android:title="@string/SystemManagement"
            android:icon="@null"
            />

    </group>
</menu>