<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddStudentByTour"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding12dp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btnAddStudentTour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/black"
        android:background="@drawable/custom_add"
        android:layout_marginTop="@dimen/padding12dp"
        android:drawableLeft="@drawable/iconadd"
        android:layout_margin="@dimen/padding12dp"
        app:backgroundTint="@null"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtNoTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/noTour"
            android:layout_marginTop="@dimen/padding40dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listStudentTour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding20dp"
            >

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>