<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacgroundlogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/mad"
            android:backgroundTint="@color/background_transparent"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/mad" />

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding20dp"
            android:layout_marginTop="@dimen/dm50dp"
            android:layout_marginRight="@dimen/padding20dp"
            android:backgroundTint="@color/colorAccent"
            android:drawableLeft="@drawable/iconuser"
            android:drawablePadding="@dimen/padding4dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/colorAccent"
            android:drawableLeft="@drawable/iconpassword"
            android:drawablePadding="@dimen/padding4dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dm50dp"
            android:backgroundTint="@color/background_transparent"
            android:paddingLeft="@dimen/padding40dp"
            android:paddingTop="@dimen/padding12dp"
            android:paddingRight="@dimen/padding40dp"
            android:paddingBottom="@dimen/padding12dp"
            android:text="@string/Login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding40dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding2dp"
                android:layout_marginRight="@dimen/padding40dp"
                android:layout_marginLeft="@dimen/padding40dp"
                android:background="@color/colorAccent"/>

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:paddingTop="@dimen/padding20dp"
                android:text="@string/company_name"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/padding20dp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>