<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:text="@string/addWithTourBusiness"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="@dimen/dm16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        tools:ignore="UselessLeaf">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding40dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutCodeTour"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm60dp"
                android:layout_marginLeft="@dimen/padding12dp"
                android:layout_marginTop="@dimen/dm16dp"
                android:layout_marginRight="@dimen/padding12dp"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/dm8dp"
                app:boxCornerRadiusBottomStart="@dimen/dm8dp"
                app:boxCornerRadiusTopEnd="@dimen/dm8dp"
                app:boxCornerRadiusTopStart="@dimen/dm8dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/padding2dp"
                app:helperTextTextColor="#FF1500"

                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCodeTour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CodeTour"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutNameTour"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm60dp"
                android:layout_marginLeft="@dimen/padding12dp"
                android:layout_marginTop="@dimen/dm16dp"
                android:layout_marginRight="@dimen/padding12dp"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/dm8dp"
                app:boxCornerRadiusBottomStart="@dimen/dm8dp"
                app:boxCornerRadiusTopEnd="@dimen/dm8dp"
                app:boxCornerRadiusTopStart="@dimen/dm8dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/padding2dp"
                app:helperTextTextColor="#FF1500"


                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNameTour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NameTour"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutNameTeacher"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm60dp"
                android:layout_marginLeft="@dimen/padding12dp"
                android:layout_marginTop="@dimen/dm16dp"
                android:layout_marginRight="@dimen/padding12dp"
                android:hint="@string/NameTeacher"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/dm8dp"
                app:boxCornerRadiusBottomStart="@dimen/dm8dp"
                app:boxCornerRadiusTopEnd="@dimen/dm8dp"
                app:boxCornerRadiusTopStart="@dimen/dm8dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/padding2dp"
                app:helperTextTextColor="#FF1500">

                <AutoCompleteTextView
                    android:id="@+id/edtNameTeacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutNameCompany"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm60dp"
                android:layout_marginLeft="@dimen/padding12dp"
                android:layout_marginTop="@dimen/dm16dp"
                android:layout_marginRight="@dimen/padding12dp"
                android:hint="@string/NameCompany"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/dm8dp"
                app:boxCornerRadiusBottomStart="@dimen/dm8dp"
                app:boxCornerRadiusTopEnd="@dimen/dm8dp"
                app:boxCornerRadiusTopStart="@dimen/dm8dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/padding2dp"
                app:helperTextTextColor="#FF1500">

                <AutoCompleteTextView
                    android:id="@+id/edtNameCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutAvailable"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm60dp"
                android:layout_marginLeft="@dimen/padding12dp"
                android:layout_marginTop="@dimen/dm16dp"
                android:layout_marginRight="@dimen/padding12dp"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/dm8dp"
                app:boxCornerRadiusBottomStart="@dimen/dm8dp"
                app:boxCornerRadiusTopEnd="@dimen/dm8dp"
                app:boxCornerRadiusTopStart="@dimen/dm8dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/padding2dp"
                app:helperTextTextColor="#FF1500"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAvailable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Available"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutDateStat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm60dp"
                android:layout_marginLeft="@dimen/padding12dp"
                android:layout_marginTop="@dimen/dm16dp"
                android:layout_marginRight="@dimen/padding12dp"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/dm8dp"
                app:boxCornerRadiusBottomStart="@dimen/dm8dp"
                app:boxCornerRadiusTopEnd="@dimen/dm8dp"
                app:boxCornerRadiusTopStart="@dimen/dm8dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/padding2dp"
                app:helperTextTextColor="#FF1500"
                app:hintTextColor="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDateStat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/DateStat"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textCursorDrawable="@null"
                    android:inputType="date"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm60dp"
                android:layout_marginLeft="@dimen/padding12dp"
                android:layout_marginTop="@dimen/dm16dp"
                android:layout_marginRight="@dimen/padding12dp"
                android:textColorHint="@color/black"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/dm8dp"
                app:boxCornerRadiusBottomStart="@dimen/dm8dp"
                app:boxCornerRadiusTopEnd="@dimen/dm8dp"
                app:boxCornerRadiusTopStart="@dimen/dm8dp"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="@dimen/padding2dp"
                app:helperTextTextColor="#FF1500"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Description"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textCursorDrawable="@null"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="@dimen/padding20dp"
        >
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="@dimen/dm120dp"
            android:layout_height="wrap_content"
            android:text="@string/Confirm"
            android:layout_margin="@dimen/padding12dp"
            android:background="@drawable/custom_business_tour_management"
            app:backgroundTint="@null"
            android:textColor="@color/black"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/dm120dp"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:layout_margin="@dimen/padding12dp"
            android:background="@drawable/custom_business_tour_management"
            app:backgroundTint="@null"
            android:textColor="@color/black"
            tools:ignore="ButtonStyle" />

    </LinearLayout>



</LinearLayout>